* Apply Databinding Refactoring & Design pattern (on progress)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,62 @@
     <string name="enterkeyAddon_help_text">엔터키를 길게 누를 때 부가기능을 설정합니다.</string>
     <string name="applicationInfo">Version 1.12\n\n이 어플리케이션은 사용자의 입력 정보를 수집하지 않습니다.</string>
     <string name="inputMethodKR_help_text">사용할 한글입력기를 선택합니다.</string>
+    <string name="krQ">ㅃ</string>
+    <string name="krq">ㅂ</string>
+    <string name="krW">ㅉ</string>
+    <string name="krw">ㅈ</string>
+    <string name="krE">ㄸ</string>
+    <string name="kre">ㄷ</string>
+    <string name="krR">ㄲ</string>
+    <string name="krr">ㄱ</string>
+    <string name="krT">ㅆ</string>
+    <string name="krt">ㅅ</string>
+    <string name="krO">ㅒ</string>
+    <string name="kro">ㅐ</string>
+    <string name="krP">ㅖ</string>
+    <string name="krp">ㅔ</string>
+    <string name="spQ">\@</string>
+    <string name="spq">±</string>
+    <string name="spW">#</string>
+    <string name="spw">×</string>
+    <string name="spE">$</string>
+    <string name="spe">÷</string>
+    <string name="spR">%</string>
+    <string name="spr">·</string>
+    <string name="spT">^</string>
+    <string name="spt">√</string>
+    <string name="spY">&amp;</string>
+    <string name="spy">π</string>
+    <string name="spA">(</string>
+    <string name="spa">≤</string>
+    <string name="spS">)</string>
+    <string name="sps">≥</string>
+    <string name="spD">{</string>
+    <string name="spd">≠</string>
+    <string name="spF">&#125;</string>
+    <string name="spf">∞</string>
+    <string name="spG">[</string>
+    <string name="spg">→</string>
+    <string name="spH">]</string>
+    <string name="sph">←</string>
+    <string name="spJ">&lt;</string>
+    <string name="spj">↑</string>
+    <string name="spK">&gt;</string>
+    <string name="spk">↓</string>
+    <string name="spL">=</string>
+    <string name="spl">♡</string>
+    <string name="spZ">\"</string>
+    <string name="spz">「</string>
+    <string name="spX">_</string>
+    <string name="spx">」</string>
+    <string name="spC">~</string>
+    <string name="spc">\"</string>
+    <string name="spV">:</string>
+    <string name="spv">\'</string>
+    <string name="spB">;</string>
+    <string name="spb">"`"</string>
+    <string name="spN">!</string>
+    <string name="spn">\\</string>
+    <string name="spM">\?</string>
+    <string name="spm">|</string>
 </resources>
