--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,5 @@
     <string name="spm">|</string>
     <string name="selection_cancel">선택 취소</string>
     <string name="selection_activate">선택</string>
+    <string name="notification_for_boilerplate_text">상용구는 최대 16개까지 지정가능합니다.</string>
 </resources>
