--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,9 @@
     <string name="special1">특수 1</string>
     <string name="special2">특수 2</string>
     <string name="textView_try">테스트해보세요</string>
-    <string name="keyboard_division_help_text">키보드에서 왼쪽/오른쪽을 분리하여 버튼 크기를 바꿉니다.\n쿼티 자판에서만 적용됩니다.\n이 기능을 사용하여 오타를 줄여보세요.</string>
-    <string name="keyboard_right_size_help_text">왼쪽 대비 오른쪽 자판의 전체적인 크기 비율을 조절합니다.</string>
+    <string name="keyboard_division_help_text">쿼티 키보드에서 왼쪽/오른쪽을 분리하여 버튼 크기를 바꿉니다.\n쿼티 자판에서만 적용됩니다.\n이 기능을 사용하여 오타를 줄여보세요.</string>
+    <string name="keyboard_right_size_help_text">쿼티 키보드에서 자판 왼편 대비 오른편의 크기 비율을 조절합니다.</string>
+    <string name="keyboard_top_row_gap_help_text">활성화 시 키보드 윗줄 중간(T, Y 사이)에 간격을 둡니다.</string>
     <string name="keyboard_bot_margin_help_text">키보드의 하단 여백 크기를 조절합니다.</string>
     <string name="keyboard_leftside_margin_help_text">키보드의 좌측 여백 크기를 조절합니다.</string>
     <string name="keyboard_rightside_margin_help_text">키보드의 우측 여백 크기를 조절합니다.</string>
@@ -19,6 +20,7 @@
     <string name="keyboard_enable_help_text">현재 스마트폰에서 사용 중인 키보드를 바꾸려면 어플 상단 우측의 설정 버튼을 눌러주세요.</string>
     <string name="keyboard_autoCapital_help_text">영어자판 사용 시 첫 글자를 대문자로 설정합니다.</string>
     <string name="keyboard_autoModeChange_help_text">특수문자 자판에서 스페이스바를 누르면 원래 자판으로 돌아옵니다.</string>
+    <string name="keyboard_toolbar_setting_help_text">툴바 메뉴 중 표시할 메뉴와 표시 순서를 설정합니다.</string>
     <string name="admin1_help_text"><b><i>STEP 1</i></b> : 키보드 관리 화면에서 "피팅키보드"를 활성화해주세요.</string>
     <string name="admin2_help_text"><b><i>STEP 2</i></b> : 키보드 변경 화면에서 "피팅키보드"를 선택해주세요.</string>
     <string name="specialkeyAddon_help_text">특수문자키를 길게 누를 때 부가기능을 설정합니다.</string>
@@ -86,4 +88,9 @@
     <string name="selection_cancel">선택 취소</string>
     <string name="selection_activate">선택</string>
     <string name="notification_for_boilerplate_text">상용구는 최대 16개까지 지정가능합니다.</string>
+    <string name="longclick_function_none">없음</string>
+    <string name="longclick_funciton_boilerplate">상용구</string>
+    <string name="longclick_funciton_cursor_pad">커서키패드</string>
+    <string name="longclick_funciton_number_pad">숫자키패드</string>
+    <string name="longclick_funciton_emoji">이모지</string>
 </resources>
